Change Log
==========

$Id$

1.0
---

New features

- new action: ``create task``
- quick search field
- external file/media asset type: options for hiding or showing fields on editing
- tracking reports: period details
- loops sites: a query view (``loops_sites.html``); add an option
  ``system.sites:/...,...`` with the paths to the sites that should be
  listed; only sites are listed to which the user has access
- TaskView with task work items listing
- work items: activate by adding option
  ``action.portlet:createWorkitem`` to type; work items listing is shown
  automatically in standard concept view.
- my work items: a query view (``userworkitems.html``); assign the query
  to the person to be referenced as a standard child

Bug fixes

- relations: store relation objects explicitly in relation registry
- external collection: now works correctly (without creating empty files
  in the var directory); resource type of generated object controlled by
  mime type; automatically executes transformation steps on media assets

0.9
---

New features

- provide basic elements for embedding FCKeditor: cybertools.ajax.fckeditor,
  JavaScript call (createFCKEditorInstance()); needs separate installation
  of FCKeditor in cybertools/ajax/fckeditor (except fckconfig.js)
- full-text indexing for OpenOffice (ODF) documents (text, spreadsheet, presentation)
- tracking reports: overview; recent changes
- basic job management: a job executor view calls job managers specified
  by loops root option ``organize.job.managers``
- allow ``__getitem__`` on Loops and ViewManager, this is a prerequisite for
  using virtual hosts over more than one path element (e.g. leading to
  views/home) on protected sites; this also allows calling of (public)
  job processiong views via wget without login credentials
- add definition of loops package version (see loops/version.py)

Bug fixes

- use select version on file, image and media asset links
  (via ``?version=this`` in the URL)